# sidequestButInGood

./: CMakeLists.txt  Konzept.md  LICENSE  README.md
application_root/: create_database.sql  create_database_backup.sql  create_test_db.sql  sidequest.db  test_reset.db  unittest.db
cmake/: GetSourceFiles.cmake
dependencies/: sqlite3.lib
src/server/: main.cpp
src/server/model/: server_quest.cpp  server_quest.h  server_user.cpp  server_user.h
src/server/storage/: column_cache.cpp  column_cache.h  database.cpp  database.h  database_creator.cpp  database_creator.h  database_factory.cpp  database_factory.h  persistable.cpp  persistable.h  prepared_statement.h  query.cpp  query.h  statement_cache.cpp  statement_cache.h
src/sidequest/model/: quest.cpp  quest.h  user.cpp  user.h
src/unit_tests/: crud_test.cpp  db_creator_test.cpp  db_factory_test.cpp  query_test.cpp
